treeview + gutter patch

--- a/styles/editor.less
+++ b/styles/editor.less
@@ -62,7 +62,8 @@ atom-text-editor::shadow,
     .line-number {
       background: transparent;
       font-size: 0.8em;
-      margin-top: 0.1em;
+      padding-top: 0.2em;
+      padding-bottom: 0.2em;
       opacity: 1.0;
 
       color: @gutter-text-color;
