--- a/styles/ui-variables.less
+++ b/styles/ui-variables.less
@@ -69,7 +69,7 @@
 
 @button-background-color:          @bg-shade-one;
 @button-background-color-hover:    @background-color-highlight;
-@button-background-color-selected: @base-selection-color;
+@button-background-color-selected: @bg-shade-two;
 @button-border-color:              @base-border-color;
 
 @tab-bar-background-color:    @tool-panel-background-color;
