color treeview tweak

--- a/styles/ui-variables.less
+++ b/styles/ui-variables.less
@@ -39,8 +39,8 @@
 
 
 // Editor ----------------------------------------------------------------------
-@indent-guide-color: @bg-shade-three;
-@invisibles-color: @bg-shade-three;
+@indent-guide-color: @bg-shade-two;
+@invisibles-color: @bg-shade-two;
 
 @gutter-background-color: transparent;
 @gutter-text-color: @text-color-subtle;
@@ -78,7 +78,7 @@
 @tab-background-color-active: @base-background-color;
 @tab-border-color:            transparent;
 
-@tree-view-background-color: @bg-shade-three;
+@tree-view-background-color: @bg-shade-two;
 @tree-view-border-color:     @base-border-color;
 
 @scrollbar-background-color: @app-background-color; // Needs to be opaque
