treeview header height

--- a/styles/tree-view.less
+++ b/styles/tree-view.less
@@ -18,7 +18,7 @@ atom-workspace {
       & > .header {
         line-height: @tab-height;
         width: 100%;
-        height: @tab-bar-height;
+        height: @tab-height;
         padding-top: @component-padding/2;
         z-index: 2000;
         font-weight: bold;
